; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/drivers/tcpip/extr_tcp_info.c_dbg_print_physaddr.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/drivers/tcpip/extr_tcp_info.c_dbg_print_physaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dbg_print_physaddr.buffer = internal global [24 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [5 x i8] c"%02x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64)* @dbg_print_physaddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @dbg_print_physaddr(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @dbg_print_physaddr.buffer, i64 0, i64 0), i8** %5, align 8
  %6 = load i8*, i8** %5, align 8
  store i8 0, i8* %6, align 1
  br label %7

7:                                                ; preds = %26, %2
  %8 = load i64, i64* %4, align 8
  %9 = add i64 %8, -1
  store i64 %9, i64* %4, align 8
  %10 = icmp ne i64 %8, 0
  br i1 %10, label %11, label %27

11:                                               ; preds = %7
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = load i8, i8* %13, align 1
  %15 = call i32 @sprintf(i8* %12, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8 zeroext %14)
  %16 = load i8*, i8** %5, align 8
  %17 = sext i32 %15 to i64
  %18 = getelementptr inbounds i8, i8* %16, i64 %17
  store i8* %18, i8** %5, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = getelementptr inbounds i8, i8* %19, i32 1
  store i8* %20, i8** %3, align 8
  %21 = load i64, i64* %4, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %11
  %24 = load i8*, i8** %5, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %5, align 8
  store i8 58, i8* %24, align 1
  br label %26

26:                                               ; preds = %23, %11
  br label %7

27:                                               ; preds = %7
  ret i8* getelementptr inbounds ([24 x i8], [24 x i8]* @dbg_print_physaddr.buffer, i64 0, i64 0)
}

declare dso_local i32 @sprintf(i8*, i8*, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
